# DAF

./: CMakeLists.txt  main.cpp  main.qml
.github/workflows/: build.yml
circular_iterator/: circular_iterator.h
circular_iterator/private/: circular_iterator_data.h  circular_iterator_impl.h  circular_iterator_type.h
data/: QDataDAF.cpp  QDataDAF.h  QDataDevicesDAF.cpp  QDataDevicesDAF.h  QDataDevicesI.cpp  QDataDevicesI.h  QDataI.cpp  QDataI.h
data/private/: QAudioDeviceWrap.cpp  QAudioDeviceWrap.h
sample_processor/: QSampleProcessor.cpp  QSampleProcessor.h
view/: QCViewDevicesItem.qml  QCViewItem.qml  QViewDevicesI.cpp  QViewDevicesI.h  QViewI.cpp  QViewI.h
view/audio/: QViewAudio.cpp  QViewAudio.h  QViewMediaDevices.cpp  QViewMediaDevices.h  QViewPlayer.cpp  QViewPlayer.h  QViewRecorder.cpp  QViewRecorder.h
view/qml/: QCViewDevices.qml  QCViewMain.qml
